@@ -226,6 +226,8 @@ Release 0.22b.dev (unpublished)
 
   `docutils.nodes.Element.set_class()`
      Obsolete. Append to Element['classes'] directly.
+  `docutils.utils.error_reporting`
+     Obsolete in Python 3
 
 * Removed files:
 
