@@ -81,6 +81,10 @@ Release 0.22b.dev (unpublished)
 
   - `Messages` also handles "loose" system messages generated by the parser.
 
+* docutils/utils/error_reporting.py
+
+  - Removed. Obsolete in Python 3.
+
 * docutils/writers/_html_base.py
 
   - Make MathML the default math_output_.
